--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,33 +5,76 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+
+    def globalConfiguration = rootProject.extensions.getByName("ext")
+    compileSdkVersion globalConfiguration["compileSDK"]
+    buildToolsVersion globalConfiguration["buildTools"]
     defaultConfig {
         applicationId "com.developer.allef.boilerplateapp"
-        minSdkVersion 18
-        targetSdkVersion 29
+        minSdkVersion globalConfiguration["minSDK"]
+        targetSdkVersion globalConfiguration["targetSDK"]
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug{
+            minifyEnabled false
+            shrinkResources false
+            useProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            testCoverageEnabled = true
+        }
     }
+    bundle {
+        language {
+            enableSplit = true
+        }
+        density {
+            enableSplit = true
+        }
+        abi {
+            enableSplit = true
+        }
+    }
+    flavorDimensions "version"
+    productFlavors {
+        homolog {
+            applicationId "com.developer.allef.boilerplateapp.homolog"
+            resValue "string", "app_name", "BooilerPlate App Homolog"
+            dimension "version"
+
+        }
+        prod {
+            applicationId "com.developer.allef.boilerplateapp"
+            resValue "string", "app_name", "BooilerPlate App"
+            dimension "version"
+
+        }
+    }
+
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation "com.jakewharton.timber:timber:4.7.1"
+
+    rootProject.appFoundationModule.each {
+        add(it.configuration, it.dependency, it.options)
+    }
+    rootProject.appNetworkingModule.each {
+        add(it.configuration, it.dependency, it.options)
+    }
+    rootProject.appTestingModule.each {
+        add(it.configuration, it.dependency, it.options)
+    }
+
 
 }
